--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stream-gold-v1",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://38e1-103-213-242-115.ngrok.io",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
